# quantum-shield-go

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  docker-compose.yml  go.mod  go.sum  openapi.yaml
.github/workflows/: ci.yml  deploy-pwa.yml  release.yml
cmd/healthcheck/: main.go
cmd/qs/: main.go  main_test.go
cmd/scanner/: main.go
cmd/server/: main.go
deploy/: prometheus.yml
deploy/k8s/: configmap.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/nginx/: nginx.conf
finance-pwa/: index.html  manifest.json  sw.js
internal/audit/: audit.go  audit_test.go
internal/auth/: auth.go  auth_test.go
internal/ca/: ca.go  ca_test.go
internal/castore/: castore.go  castore_test.go
internal/channel/: channel.go  channel_test.go
internal/cluster/: cluster_test.go  command.go  fsm.go  http.go  node.go
internal/dsa/: dsa.go  dsa_test.go
internal/fips/: fips.go  fips_test.go
internal/hsm/: hsm.go  hsm_test.go  pkcs11.go  pkcs11_test.go
internal/hybrid/: hybrid.go  hybrid_test.go
internal/kdf/: kdf.go  kdf_test.go
internal/kem/: kem.go  kem_test.go
internal/keystore/: keystore.go  keystore_test.go
internal/slhdsa/: slhdsa.go  slhdsa_test.go
internal/threshold/: threshold.go  threshold_test.go
internal/vault/: gfmul_test.go  vault.go  vault_test.go
pkg/api/: server.go  (+1 more)
sdk/python/: pyproject.toml
sdk/python/quantum_shield/: __init__.py  async_client.py  client.py  exceptions.py  models.py
sdk/python/tests/: test_client.py
(+25 files in other folders)
