[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-shield"
version = "0.1.0"
description = "Python SDK for the QuantumShield post-quantum cryptography API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuantumShield" }]
keywords = ["post-quantum", "cryptography", "ml-kem", "ml-dsa", "pqc", "fips"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

# Zero mandatory dependencies — uses stdlib urllib only.
dependencies = []

[project.optional-dependencies]
# Async client (AsyncQuantumShield)
async = ["httpx>=0.27"]
# Development / testing
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage   = "https://github.com/quantum-shield/quantum-shield-go"
Repository = "https://github.com/quantum-shield/quantum-shield-go"

[tool.hatch.build.targets.wheel]
packages = ["quantum_shield"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
